Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,14 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="https://github.com/promise-zones/promise-zones" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/promise-zones/promise-zones/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/promise-zones/promise-zones/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
+        <a href="https://github.com/promise-zones" class="button fork"><strong>View On GitHub</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
@@ -45,9 +38,9 @@
 <p>This started as a 2016 National Day of Civic Hacking <a href="https://cache.codeforamerica.org/events/national-day-2016/challenge-promise-zone-data">Challenge: Data Visualization for Obama Administration's Promise Zones</a>.</p>
 
 <h3>
-<a id="main-visualization" class="anchor" href="#main-visualization" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Main Visualization</h3>
+<a id="visualizations" class="anchor" href="#visualizations" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Visualization(s)</h3>
 
-<p>The main (and currently only) visualization we have made so far, compares the unemployment rate to the poverty rate, for each county in the US, and compares those to the Promise Zones.  You can see that here (todo: add link when it's set up).</p>
+<p>Check out the <a href="http://promise-zones.github.io/promise-zones/">list of visualizations</a></p>
 
 <h3>
 <a id="future-plans" class="anchor" href="#future-plans" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Future Plans</h3>
@@ -64,7 +57,6 @@
 <p>To be clear, we are doing this on our spare time (similar to people donating their time to help any time of civic endeavor like volunteer at soup kitchen, etc). To be even more clear, this is not directly run by the Obama Administration or the government.</p>
       </section>
       <footer>
-        <p>Project maintained by <a href="https://github.com/promise-zones">promise-zones</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
