Fixing weird template parsing thing caused by @ in js

--- a/visualize.html
+++ b/visualize.html
@@ -194,7 +194,7 @@ useD3: true
 			// now list out the top 50 or so
 			for (var i = 0; i < count; i++) {
 				var d = this.data[i];
-				// @todo: figure out way to link up to chart - maybe trigger tooltip or something
+				// todo: figure out way to link up to chart - maybe trigger tooltip or something
 				// OR Give this it's own tab or something
 				//
 				// TODO: Maybe figure out way to color these on the chart dynamically (so when weights change, it
