svg-map-container

--- a/promise-zone-builder.html
+++ b/promise-zone-builder.html
@@ -19,7 +19,7 @@ useColorBrewer: true
 	<button id="neediest-neighbor" disabled="disabled">Neediest Neighbor</button>
 	<button id="reset">Reset</button>
 </div>
-<div id="svg-container"><svg id="map"></svg></div>
+<div id="svg-map-container"><svg id="map"></svg></div>
 </div> <!-- left-column -->
 <div id="left-column">
 <div id="pz-info">
