Ready to ship to DJ Patil
Ready to ship to DJ Patil

--- a/promise-zone-builder.html
+++ b/promise-zone-builder.html
@@ -48,3 +48,11 @@ pageJs: builder
 		</div> <!-- pz-detail -->
 	</div> <!-- right-column -->
 </div> <!-- container -->
+<div style="clear:both;"></div>
+<div id="content">
+<p>Start to build a Promise Zone by selecting any one county on the map. From there, you will be able to select geographically contiguous counties. Click the Neediest Neighbor button to select the neighboring county with the highest rate of poverty.</p>
+<p>The dark blue counties on the map are areas where poverty rates are high.</p>
+<p>The red counties are those that you have selected to be part of your Promise Zone. The summarized and detailed statistics for all of the Promise Zone counties are shown on the left. The enabled counties surrounding the Promise Zone are those that are eligible to be added.</p>
+
+
+</div>
