--- a/promise-zone-builder.html
+++ b/promise-zone-builder.html
@@ -56,7 +56,7 @@ pageJs: builder
 <p>The red counties are those that you have selected to be part of your Promise Zone. The summarized and detailed statistics for all of the Promise Zone counties are shown on the left. The enabled counties surrounding the Promise Zone are those that are eligible to be added.</p>
 <h2>Data Sources</h2>
 <ul>
-<li><a href="https://brigades.opendatanetwork.com/resource/7m6b-dxmh.json">Promise Zone data set</a>
+<li><a href="https://brigades.opendatanetwork.com/dataset/layer_0/7m6b-dxmh">Promise Zone data set</a> which is a transformed dataset from the source <a href = "http://egis.hud.opendata.arcgis.com/datasets/a10cbd9187a34bd2a28574a3cfe12e64_0"> from Housing and Urban Development Department</a>
 <li><a href="http://data.bls.gov/map/MapToolServlet?survey=la">Local Area Unemployment Rates</a> from the U.S. Bureau of Labor Statistics</li>
 <li><a href="https://odn.data.socrata.com/dataset/US-Occupations/t8be-b2rm">Occupational and Census Data</a> from the Census 2013 American Community Survey (via Socrata)</li>
 <li><a href="https://stuagano.cartodb.com/viz/423d15d0-2a8d-11e6-8898-0e5db1731f59/public_map">Geographical data</a> CartoDB</li>
