Initially setting up linking from ranked list

--- a/ranked-list.html
+++ b/ranked-list.html
@@ -32,5 +32,21 @@ pageJs: rank
 		</label>
 	</fieldset>
 	<br>
-	<ol></ol>
+	<ol>
+		<li></li>
+	</ol>
+	<div id="empty" style="display: none;">
+		<span class="stats">
+			Unemployment: <span class="ue-rate"></span><br>
+			Poverty: <span class="pv-rate"></span><br>
+			Population: <span class="pop"></span>
+		</span>
+		<span class="area-name"></span>
+		<br>
+		<span class="links">
+			<a class="vis-link" href="{{ site.baseurl }}/visualize.html#fips_id=">Graph</a>
+			<a class="build-link" href="{{ site.baseurl }}/promise-zone-builder.html#">Build</a>
+		</span>
+		<span class="pz">Promise Zone</span>
+	</div>
 </div>
